--- a/public/show.html
+++ b/public/show.html
@@ -33,54 +33,45 @@
 
   <div class="top">
     <div class="container">
-      <h1>Contacts</h1>
+      <a href="index.html">Back to contacts...</a>
+
+      <div class="pull-right">
+        <a href="edit.html" class="btn btn-default">Edit</a>
+        <a href="index.html" class="btn btn-danger">Delete</a>
+      </div>
+
+      <h1>
+        Donald Black
+        <br>
+        <small>
+          Tax Accountant at Topicware
+        </small>
+      </h1>
     </div>
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col-md-8">
-        <p class="lead">2 matching contacts</p>
-      </div>
       <div class="col-md-4">
-        <input class="form-control" placeholder="Search..." autofocus>
+        <h3><small>Phone</small></h3>
+        6-(880)062-6935
+      </div>
+
+      <div class="col-md-4">
+        <h3><small>Email</small></h3>
+        dblack0@mashable.com
+      </div>
+
+      <div class="col-md-4">
+        <h3><small>Address</small></h3>
+        <address>4 Elmside Parkway<br>Buffalo, NY 14220</address>
+      </div>
+
+      <div class="col-md-8">
+        <h3><small>Note</small></h3>
+        <p>Phasellus in felis. Donec semper sapien a libero. Nam dui. Proin leo odio, porttitor id, consequat in, consequat ut, nulla. Sed accumsan felis.</p>
       </div>
     </div>
-
-    <br>
-
-    <table class="table table-bordered table-striped table-hover">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Phone</th>
-          <th>E-mail</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <strong><a href="show.html">Donald Black</a></strong><br>
-            Topicware
-          </td>
-          <td>6-(880)062-6935</td>
-          <td>
-            <a href="mailto:dblack0@mashable.com">dblack0@mashable.com</a>
-          </td>
-        </tr>
-
-        <tr>
-          <td>
-            <strong><a href="show.html">Frank Little</a></strong><br>
-            Browseblab
-          </td>
-          <td>9-(804)406-9373</td>
-          <td>
-            <a href="mailto:flittle2@tumblr.com">flittle2@tumblr.com</a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
   </div>
 </body>
 </html>
