--- a/public/login.html
+++ b/public/login.html
@@ -10,6 +10,7 @@
 
   <!-- app files -->
   <link rel="stylesheet" href="app/sample-app.css">
+  <script src="app/app.js"></script>
 </head>
 <body>
   <div class="row">
