--- a/public/app/show/show.html
+++ b/public/app/show/show.html
@@ -19,19 +19,24 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4" ng-if="contact.phone">
       <h3><small>Phone</small></h3>
       {{ contact.phone }}
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4" ng-if="contact.email">
       <h3><small>Email</small></h3>
       {{ contact.email }}
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4" ng-if="contact.address">
       <h3><small>Address</small></h3>
       <address>{{ contact.address }}</address>
+    </div>
+
+    <div class="col-md-4" ng-if="contact.birthdate">
+      <h3><small>Birthdate</small></h3>
+      <p>{{ contact.birthdate | date:'d.M.yyyy' }}</p>
     </div>
 
     <div class="col-md-8">
