--- a/public/app/edit/edit.html
+++ b/public/app/edit/edit.html
@@ -10,31 +10,56 @@
 </div>
 
 <div class="container">
-  <form>
-    <label>Name</label>
-    <input type="text" class="form-control" ng-model="contact.name" autofocus>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-2">
 
-    <label>Company</label>
-    <input type="text" class="form-control" ng-model="contact.company">
+      <form name="contactForm">
 
-    <label>Job Title</label>
-    <input type="text" class="form-control" ng-model="contact.jobTitle">
+        <label>Name</label>
 
-    <label>Phone</label>
-    <input type="text" class="form-control" ng-model="contact.phone">
+        <div class="form-group" ng-class="{'has-error': contactForm.name.$invalid}">
+          <label class="control-label" ng-show="contactForm.name.$error.required">Name is required.</label>
 
-    <label>Email</label>
-    <input type="text" class="form-control" ng-model="contact.email">
+          <input type="text" class="form-control" ng-model="contact.name" name="name" autofocus required>
+        </div>
 
-    <label>Address</label>
-    <textarea rows="4" class="form-control" ng-model="contact.address"></textarea>
+        <label>Company</label>
 
-    <label>Note</label>
-    <textarea rows="4" class="form-control" ng-model="contact.note"></textarea>
+        <div class="form-group" ng-class="{'has-error': contactForm.company.$invalid}">
+          <label class="control-label" ng-show="contactForm.company.$error.required">Company is required.</label>
 
-    <br>
+          <input type="text" class="form-control" ng-model="contact.company" name="company" required>
+        </div>
 
-    <a ng-click="save()" class="btn btn-primary">Save</a>
-    <a ui-sref="show({id: contact.id})" class="btn btn-link">Cancel</a>
-  </form>
+        <label>Job Title</label>
+        <input type="text" class="form-control" ng-model="contact.jobTitle" name="jobTitle">
+
+        <label>Phone</label>
+        <input type="text" class="form-control" ng-model="contact.phone" name="phone">
+
+        <label>Email</label>
+
+        <div class="form-group" ng-class="{'has-error': contactForm.email.$invalid}">
+          <label class="control-label" ng-show="contactForm.email.$error.required">Email is required.</label>
+          <label class="control-label" ng-show="contactForm.email.$error.email">Email is not valid.</label>
+
+          <input type="email" class="form-control" ng-model="contact.email" name="email" required>
+        </div>
+
+        <label>Birthdate</label>
+        <input type="date" class="form-control" ng-model="contact.birthdate" name="birthdate">
+
+        <label>Address</label>
+        <textarea rows="4" class="form-control" ng-model="contact.address" name="address"></textarea>
+
+        <label>Note</label>
+        <textarea rows="4" class="form-control" ng-model="contact.note" name="note"></textarea>
+
+        <br>
+
+        <input type="submit" ng-click="save()" ng-disabled="!contactForm.$valid" class="btn btn-primary" value="Save">
+        <a ui-sref="show({id: contact.id})" class="btn btn-link">Cancel</a>
+      </form>
+    </div>
+  </div>
 </div>
