--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="bower_components/lodash/dist/lodash.js"></script>
 
   <!-- app files -->
   <link rel="stylesheet" href="styles/contacts-app.css">
@@ -19,6 +20,7 @@
   <script src="app/edit/new.js"></script>
   <script src="app/login/login.js"></script>
   <script src="app/layout/layout.js"></script>
+  <script src="app/service/contact-service.js"></script>
 </head>
 <body ui-view>
 
