--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="contacts-app">
+<html ng-app="sample-app">
 <head>
   <title>Sample App</title>
 
@@ -17,10 +17,9 @@
   <script src="app/home/home.js"></script>
   <script src="app/show/show.js"></script>
   <script src="app/edit/edit.js"></script>
-  <script src="app/edit/new.js"></script>
   <script src="app/login/login.js"></script>
   <script src="app/layout/layout.js"></script>
-  <script src="app/service/contact-service.js"></script>
+  <script src="app/service/contacts-service.js"></script>
 </head>
 <body ui-view>
 
