delete on backend

--- a/public/app/show/show.html
+++ b/public/app/show/show.html
@@ -4,7 +4,7 @@
 
     <div class="pull-right">
       <a ui-sref="edit({id: contact.id})" class="btn btn-default">Edit</a>
-      <a ui-sref="home" class="btn btn-danger">Delete</a>
+      <a ng-click="delete()" class="btn btn-danger">Delete</a>
     </div>
 
     <h1>
