--- a/public/app/show/show.html
+++ b/public/app/show/show.html
@@ -3,7 +3,7 @@
     <a  ui-sref="home">Back to contacts...</a>
 
     <div class="pull-right">
-      <a ui-sref="edit({id: contact.id})" class="btn btn-default">Edit</a>
+      <a ui-sref="edit({id: contact._id})" class="btn btn-default">Edit</a>
       <a ng-click="delete()" class="btn btn-danger">Delete</a>
     </div>
 
