--- a/public/app/edit/edit.html
+++ b/public/app/edit/edit.html
@@ -1,6 +1,6 @@
   <div class="top">
     <div class="container">
-      <a ui-sref="show({id: contact.id})">Back to detail...</a>
+      <a ui-sref="show({id: contact._id})">Back to detail...</a>
 
       <h1>
         Edit contact<br>
@@ -35,6 +35,6 @@
       <br>
 
       <a ng-click="save()" class="btn btn-primary">Save</a>
-      <a ui-sref="show({id: contact.id})" class="btn btn-link">Cancel</a>
+      <a ui-sref="show({id: contact._id})" class="btn btn-link">Cancel</a>
     </form>
   </div>
