--- a/public/app/edit/edit.html
+++ b/public/app/edit/edit.html
@@ -1,40 +1,61 @@
-  <div class="top">
-    <div class="container">
-      <a ui-sref="show({id: contact._id})">Back to detail...</a>
-
-      <h1>
-        Edit contact<br>
-        <small>{{ contact.name }}</small>
-      </h1>
-    </div>
-  </div>
-
+<div class="top">
   <div class="container">
-    <form>
-      <label>Name</label>
-      <input type="text" class="form-control" ng-model="contact.name" autofocus>
+    <a ui-sref="show({id: contact._id})">Back to detail...</a>
 
-      <label>Company</label>
-      <input type="text" class="form-control" ng-model="contact.company">
-
-      <label>Job Title</label>
-      <input type="text" class="form-control" ng-model="contact.jobTitle">
-
-      <label>Phone</label>
-      <input type="text" class="form-control" ng-model="contact.phone">
-
-      <label>Email</label>
-      <input type="text" class="form-control" ng-model="contact.email">
-
-      <label>Address</label>
-      <textarea rows="4" class="form-control" ng-model="contact.address"></textarea>
-
-      <label>Note</label>
-      <textarea rows="4" class="form-control" ng-model="contact.note"></textarea>
-
-      <br>
-
-      <a ng-click="save()" class="btn btn-primary">Save</a>
-      <a ui-sref="show({id: contact._id})" class="btn btn-link">Cancel</a>
-    </form>
+    <h1>
+      Edit contact<br>
+      <small>{{ contact.name }}</small>
+    </h1>
   </div>
+</div>
+
+<div class="container">
+  <form name="contactForm">
+    <div class="form-group" ng-class="{'has-error': contactForm.name.$invalid}">
+      <label class="control-label">Name *</label>
+      <input name="name" type="text" class="form-control" ng-model="contact.name" autofocus required>
+      <span class="help-block" ng-show="contactForm.name.$error.required">Name is required</span>
+    </div>
+
+    <div class="form-group" ng-class="{'has-error': contactForm.company.$invalid}">
+      <label class="control-label">Company</label>
+      <input name="company" type="text" class="form-control" ng-model="contact.company">
+    </div>
+
+    <div class="form-group" ng-class="{'has-error': contactForm.jobTitle.$invalid}">
+      <label class="control-label">Job Title</label>
+      <input name="jobTitle" type="text" class="form-control" ng-model="contact.jobTitle">
+    </div>
+
+    <div class="form-group" ng-class="{'has-error': contactForm.phone.$invalid}">
+      <label class="control-label">Phone *</label>
+      <input name="phone" type="text" class="form-control" ng-model="contact.phone" required ng-pattern="/^\+?[\d\s]+$/">
+      <span class="help-block" ng-show="contactForm.phone.$error.required">Phone is required</span>
+      <span class="help-block" ng-show="contactForm.phone.$error.pattern">It has look like a phone number</span>
+    </div>
+
+    <div class="form-group" ng-class="{'has-error': contactForm.email.$invalid}">
+      <label class="control-label">Email *</label>
+      <input name="email" type="email" class="form-control" ng-model="contact.email" required>
+      <span class="help-block" ng-show="contactForm.email.$error.required">Email is required</span>
+      <span class="help-block" ng-show="contactForm.email.$error.email">This doesn't look like an email</span>
+    </div>
+
+    <div class="form-group" ng-class="{'has-error': contactForm.address.$invalid}">
+      <label class="control-label">Address *</label>
+      <textarea name="address" rows="4" class="form-control" ng-model="contact.address" required jsa-address></textarea>
+      <span class="help-block" ng-show="contactForm.address.$error.required">Address is required</span>
+      <span class="help-block" ng-show="contactForm.address.$error.jsaAddress">Address must have at least three lines</span>
+    </div>
+
+    <div class="form-group" ng-class="{'has-error': contactForm.note.$invalid}">
+      <label class="control-label">Note</label>
+      <textarea name="note" rows="4" class="form-control" ng-model="contact.note"></textarea>
+    </div>
+
+    <div class="form-group">
+      <a class="btn btn-primary" ng-disabled="contactForm.$invalid" ng-click="save()">Save</a>
+      <a ui-sref="show({id: contact._id})" class="btn btn-link">Cancel</a>
+    </div>
+  </form>
+</div>
