--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <!-- app files -->
   <link rel="stylesheet" href="styles/contacts-app.css">
   <script src="app/app.js"></script>
+  <script src="app/directive/jsaAddress.js"></script>
   <script src="app/home/home.js"></script>
   <script src="app/show/show.js"></script>
   <script src="app/edit/edit.js"></script>
