--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -1,6 +1,9 @@
 <div class="top">
   <div class="container">
     <h1>Contacts</h1>
+    <div class="pull-right">
+      <a ui-sref="edit" class="btn btn-default">New contact</a>
+    </div>
   </div>
 </div>
 
