--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   <script src="app/app.js"></script>
   <script src="app/directive/jsaAddress.js"></script>
   <script src="app/directive/jsa-field.js"></script>
+  <script src="app/filter/slugify.js"></script>
   <script src="app/home/home.js"></script>
   <script src="app/show/show.js"></script>
   <script src="app/edit/edit.js"></script>
