--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
   <script src="app/login/login.js"></script>
   <script src="app/layout/layout.js"></script>
   <script src="app/service/contacts-service.js"></script>
+  <script src="app/service/user-service.js"></script>
 </head>
 <body ui-view>
 
